WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218137
REGRESSION (
r260276
): Unable to click on image and text link at the bottom of
https://www.nytimes.com/
article
https://bugs.webkit.org/show_bug.cgi?id=218137
Summary
REGRESSION (r260276): Unable to click on image and text link at the bottom of...
Simon Fraser (smfr)
Reported
2020-10-23 14:24:55 PDT
REGRESSION (
r260276
): Unable to click on image and text link at the bottom of
https://www.nytimes.com/
article
Attachments
Patch
(5.52 KB, patch)
2020-10-23 14:35 PDT
,
Simon Fraser (smfr)
zalan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(16.42 KB, patch)
2020-10-23 21:07 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-10-23 14:35:54 PDT
Created
attachment 412212
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-10-23 14:35:57 PDT
<
rdar://problem/70439526
>
Simon Fraser (smfr)
Comment 3
2020-10-23 21:07:34 PDT
Created
attachment 412229
[details]
Patch
EWS
Comment 4
2020-10-23 23:30:44 PDT
Committed
r268947
: <
https://trac.webkit.org/changeset/268947
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412229
[details]
.
Truitt Savell
Comment 5
2020-10-26 14:49:32 PDT
Reverted
r268947
for reason: Caused 60 image failures on Catalina WK2 Committed
r268997
: <
https://trac.webkit.org/changeset/268997
>
Simon Fraser (smfr)
Comment 6
2020-10-26 14:51:13 PDT
(In reply to Truitt Savell from
comment #5
)
> Reverted
r268947
for reason: > > Caused 60 image failures on Catalina WK2 > > Committed
r268997
: <
https://trac.webkit.org/changeset/268997
>
It didn't directly cause image failures. It may have caused the testing harness to use the image result from the wrong test, or to interfere with snapshotting somehow, maybe.
EWS
Comment 7
2020-10-26 16:38:15 PDT
Committed
r269000
: <
https://trac.webkit.org/changeset/269000
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412229
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug