REGRESSION (r260276): Unable to click on image and text link at the bottom of https://www.nytimes.com/ article https://bugs.webkit.org/show_bug.cgi?id=218137 <rdar://problem/70439526>

Reviewed by Zalan Bujtas.
Source/WebCore:

r238725 made RenderLayers for accelerated overflow:scroll be self-painting, but that
changes paint and hit-testing order, which affected this nytimes article (the failing
element has large negative margin-top).

This is the fundamental compositing bug, but we can work around it in this case by
only making the layer self-painting if it does actually scroll.

Test: fast/layers/overflow-scroll-self-painting.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateScrollInfoAfterLayout): Need to update isSelfPaintingLayer()
after layout because now it depends on scrollable overflow.
(WebCore::RenderLayer::shouldBeSelfPaintingLayer const): Consult hasCompositedScrollableOverflow()
rather than canUseCompositedScrolling().

LayoutTests:

New test. Rebaseline tests affected by the self-painting layer change.

* compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* compositing/shared-backing/overflow-scroll/relative-in-clipping-in-scroller-in-clipping-expected.txt:
* fast/layers/overflow-scroll-self-painting-expected.html: Added.
* fast/layers/overflow-scroll-self-painting.html: Added.
* platform/ios-wk2/compositing/shared-backing/overflow-scroll/previous-sibling-prevents-inclusiveness-expected.txt:
* platform/ios-wk2/compositing/shared-backing/overflow-scroll/relative-in-clipping-in-scroller-in-clipping-expected.txt:


Canonical link: https://commits.webkit.org/230903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269000 268f45cc-cd09-0410-ab3c-d52691b4dbfc