Source/WebCore/rendering/RenderLayer.cpp
@@ -3898,6 +3898,7 @@ void RenderLayer::updateScrollInfoAfterLayout()
     ScrollOffset originalScrollOffset = scrollOffset();
 
     computeScrollDimensions();
+    updateSelfPaintingLayer();
 
 #if ENABLE(CSS_SCROLL_SNAP)
     // FIXME: Ensure that offsets are also updated in case of programmatic style changes.
@@ -6503,7 +6504,7 @@ bool RenderLayer::shouldBeSelfPaintingLayer() const
         return true;
 
     return hasOverlayScrollbars()
-        || canUseCompositedScrolling()
+        || hasCompositedScrollableOverflow()
         || renderer().isTableRow()
         || renderer().isCanvas()
         || renderer().isVideo()
